<resources>
    <string name="app_name">MOMOGU</string>
    <string name="content">null</string>
    <string name="zero">0</string>

    <!--Post Adapter-->
    <string name="date">Date</string>
    <string name="time_ago">Time Ago</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="weight">Weight</string>
    <string name="location">Location</string>

    <!--Activity Account Setting-->
    <string name="change_image">Ubah Foto Profil</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="address">Alamat Lengkap</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>

    <!--Activity Add Post-->
    <string name="add_data">Tambah Data</string>
    <string name="tv_image_add">Pilih Gambar Sapi Anda!</string>
    <string name="tv_video_add">Pilih Video Sapi Anda!</string>
    <string name="tv_max_video_add">Maksimal 30 Detik</string>
    <string name="tv_file_video_add">Nama File Video</string>
    <string name="ti_type_add">Jenis Sapi</string>
    <string name="ti_age_add">Umur (Dalam Bulan)</string>
    <string name="ti_weight_add">Bobot (Dalam KG)</string>
    <string name="ti_color_add">Warna</string>
    <string name="ti_gender_add">Jenis Kelamin</string>
    <string name="ti_desc_add">Deskripsi</string>
    <string name="ti_price_add">Harga</string>
    <string name="ti_shipping_add">Biaya Pengiriman</string>
    <string name="bnt_select_location_add">Pilih Lokasi Sapi</string>
    <string name="tv_location_add">Lokasi</string>
    <string name="tv_field_location_add">Alamat Lengkap</string>
    <string name="cb_letter_add">Saya menjamin sapi ini telah memiliki surat dari kepala desa setempat</string>
    <string name="cb_condition_add">Saya menjamin sapi ini dalam keadaan sehat dan layak untuk dijual.</string>
    <string name="tambah_data">Tambah Data</string>

    <string name="toast_video_max_add">Video lebih dari 30 detik!</string>
    <string name="toast_image_add">Silahkan pilih foto sapi anda!</string>
    <string name="toast_video_add">Silahkan pilih video sapi anda!</string>
    <string name="toast_type_add">Nama sapi dibutuhkan!</string>
    <string name="toast_age_add">Umur sapi dibutuhkan!</string>
    <string name="toast_weight_add">Bobot sapi dibutuhkan!</string>
    <string name="toast_color_add">Warna sapi dibutuhkan!</string>
    <string name="toast_gender_add">Jenis kelamin sapi dibutuhkan!</string>
    <string name="toast_desc_add">Deskripsi sapi dibutuhkan!</string>
    <string name="toast_price_add">Harga sapi dibutuhkan!</string>
    <string name="toast_shipping_add">Ongkos pengiriman sapi dibutuhkan!</string>
    <string name="toast_location_add">Silahkan pilih lokasi sapi anda!</string>
    <string name="toast_letter_add">Penjaminan surat sapi dibutuhkan!</string>
    <string name="toast_condition_add">Penjaminan sapi dibutuhkan!</string>
    <string name="toast_add_cow">Menambahkan Sapi!</string>
    <string name="toast_wait_add">Silahkan tunggu, sementara kami sedang menambahkan postingan sapi anda!</string>
    <string name="toast_cow_add">Sapi berhasil ditambahkan!</string>

    <!--Activity Detail-->
    <string name="tv_detail">Detail</string>
    <string name="tv_tap_detail">Tap untuk perbesar</string>
    <string name="tv_price_detail">Harga</string>
    <string name="tv_product_detail">Jenis Sapi</string>
    <string name="tv_date_detail">Tanggal</string>
    <string name="tv_see_video_detail">Lihat Kondisi Sapi</string>
    <string name="tv_weight_detail">Bobot</string>
    <string name="tv_age_detail">umur</string>
    <string name="tv_gender_detail">Jenis Kelamin</string>
    <string name="tv_color_detail">Warna</string>
    <string name="tv_desc_detail">Deskripsi</string>
    <string name="tv_name_detail">Nama Lengkap</string>
    <string name="tv_status_detail">Status</string>
    <string name="tv_city_detail">Kota</string>
    <string name="tv_see_location_detail">Lihat Lokasi Sapi</string>
    <string name="tv_shipping_detail">Pengiriman</string>
    <string name="tv_payment_detail">Metode Pembayaran</string>
    <string name="tv_payment_on_detail">Ditempat</string>
    <string name="note_payment_detail">Mohon sediakan uang pas</string>
    <string name="tv_buy_detail">Beli Sekarang</string>

    <string name="toast_permission_location_detail">Harap terima izin untuk melihat lokasi</string>
    <string name="toast_gps_detail">GPS tidak diaktifkan!</string>
    <string name="toast_gps_on_detail">Aktifkan untuk melihat lokasi</string>
    <string name="toast_sell_detail">Sapi telah terjual!</string>
    <string name="toast_was_taken_detail">Transaksi telah berlangsung!</string>
    <string name="toast_warning_detail">Peringatan!</string>
    <string name="toast_delete_detail">Apakah anda ingin menghapus data sapi ini?</string>
    <string name="toast_delete_succeed_detail">Data sapi berhasil dihapus!</string>
    <string name="toast_remove_fav_detail">Apakah anda ingin menghapus sapi ini dari daftar favorit?</string>
    <string name="toast_remove_fav_succeed_detail">Sapi dihapus dari daftar favorite!</string>

    <!--Activity Sign In-->
    <string name="email">Email</string>
    <string name="login">Masuk Sekarang!</string>
    <string name="welcome">Masuk dengan akun yang telah terdaftar.</string>
    <string name="password">Kata Sandi</string>
    <string name="no_acc">Tidak punya akun?</string>
    <string name="no_acc_bred">Akun untuk peternak?</string>
    <string name="invalid_email">Format email salah!</string>
    <string name="loading_title_login">Harap tunggu sementara kami Masuk untuk Anda, ini mungkin memakan waktu cukup lama&#8230;</string>
    <string name="loading_title_register">Harap tunggu sementara kami Daftar untuk Anda, ini mungkin memakan waktu cukup lama&#8230;</string>

    <!--Activity Sign Up-->
    <string name="registrasi">Daftar Akun</string>
    <string name="fill_input">Silahkan Isi data dibawah ini</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="username">Nama Pengguna</string>
    <string name="whatsapp">Nomor Whatsapp Aktif</string>
    <string name="register">Daftar Sekarang!</string>
    <string name="have_acc">Sudah punya akun?</string>

    <!--Fragment Scales-->
    <string name="scales">Timbangan</string>
    <string name="ti_chest_scales">Lingkar Dada</string>
    <string name="ti_body_scales">Panjang Badan</string>
    <string name="tv_estimation">Perkiraan Bobot Sapi</string>
    <string name="ti_weight_scales">0.0 KG</string>
    <string name="tap_zoom_scales">Tap untuk perbesar</string>
    <string name="tv_detail_exterior">Detail Exterior</string>
    <string name="UI_info_exterior">
        Hai, untuk melakukan pengukuran bobot sapi, baiknya mengetahui beberapa hal berikut:\n
        1. Alat ukur menggunakan pita ukur baju atau sejenisnya.\n
        2. Sapi di ukur pada bagian panjang badan dan lingkar dada.\n
        👉🏻 Panjang badan:\n
        Yaitu jarak antara ujung samping tulang bahu
        sampai dengan ujung tulang duduk.\n
        👉🏻 Lingkar Dada:\n
        Yaitu panjang melingkar keliling yang diukur pada bagian belakang
        tulang gumba pada tulang rusuk ke tiga sampai ke empat.
    </string>

    <!--Fragment Profile-->

    <!--Splash Screen-->
    <string name="power_by">Powered By</string>
    <string name="splash_name">Muhammad Al Fikri</string>
    <string name="welcome_back">Selamat Datang Kembali,</string>

    <string name="edit_data">Ubah Data</string>
    <string name="delete_data">Hapus Data</string>
    <string name="checkout">CheckOut</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="UI_validation_maps_select_area">The location must be selected first. Tap on the desired location to select the location</string>

    <string name="indonesia">id</string>

    <string-array name="TypeCow">
        <item>Sapi Aceh</item>
        <item>Sapi Bali</item>
        <item>Sapi Madura</item>
        <item>Sapi Simental</item>
        <item>Sapi Brahman</item>
        <item>Sapi Ongole</item>
        <item>Sapi Peranakan Ongole</item>
    </string-array>

    <string-array name="Gender">
        <item>Jantan</item>
        <item>Betina</item>
    </string-array>

    <string-array name="Report">
        <item>Batalkan Transaksi</item>
        <item>Sapi Tidak Sampai</item>
        <item>Sapi Tidak Sesuai Deskripsi</item>
        <item>Biaya Transaksi Tidak Sesuai</item>
    </string-array>

</resources>