<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ScalesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_scales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/top_bar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_scales"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/top_bar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_thin"
                    android:text="@string/scales"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_scales"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvImageScales"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="14dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/exteriorImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/exterior_sapi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="@color/lima"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/tap_zoom_scales"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvDetailExterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvImageScales"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/tv_detail_exterior"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiChestScales"
                style="@style/ti_layout"
                android:layout_below="@+id/tvDetailExterior"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/ti_chest_scales"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etChestScales"
                    style="@style/et_layout"
                    android:drawableStart="@drawable/ic_cow"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiBodyScales"
                style="@style/ti_layout"
                android:layout_below="@+id/tiChestScales"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/ti_body_scales"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBodyScales"
                    style="@style/et_layout"
                    android:drawableStart="@drawable/ic_cow"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvEstimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tiBodyScales"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/tv_estimation"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiWeightScales"
                style="@style/ti_layout"
                android:layout_width="wrap_content"
                android:layout_below="@+id/tvEstimation"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWeightScales"
                    style="@style/et_layout"
                    android:layout_width="wrap_content"
                    android:clickable="false"
                    android:drawableStart="@drawable/ic_cow"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/ti_weight_scales" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>