<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_sign_in_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content"
        android:src="@drawable/momogu" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/h3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/h2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:text="@string/welcome" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_welcome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email"
                style="@style/ti_layout"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/et_layout"
                    android:drawableStart="@drawable/ic_mail"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lblInvalidEmail"
                android:layout_width="@dimen/zerodp"
                android:layout_height="wrap_content"
                android:text="@string/invalid_email"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp"
                android:textStyle="italic"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/ti_email"
                app:layout_constraintStart_toStartOf="@+id/ti_email"
                app:layout_constraintTop_toBottomOf="@+id/ti_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password"
                style="@style/ti_layout"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@id/ti_email"
                app:layout_constraintStart_toStartOf="@id/ti_email"
                app:layout_constraintTop_toBottomOf="@+id/ti_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/et_layout"
                    android:drawableStart="@drawable/ic_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="@style/greenButtonStyle"
                android:layout_width="@dimen/mediumButtonWidth"
                android:layout_height="@dimen/mediumButtonHeight"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_password" />

            <LinearLayout
                android:id="@+id/signup_link_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn">

                <TextView
                    style="@style/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_acc" />

                <TextView
                    style="@style/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins_thin"
                    android:text="@string/register" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/layoutLoadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animLoadingView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/lblLoadingViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/animLoadingView"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:lines="3"
            android:text="@string/loading_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>